--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ font-weight: 500;
 font-size: 18px;
 line-height: 22px;
 
-
+padding:10px!important;
 color: #FFFFFF;
 }
 
@@ -141,6 +141,57 @@ line-height: 29px;
   margin: 50px;
 }
 
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus{
+  outline: none;
+  box-shadow: none;
+  border:0;
+
+}
+
+.toggler-icon{
+  width:30px;
+  height:3px;
+  background-color: white;
+  display: block;
+  transition: all 0.2s;
+  
+}
+
+.middle-bar{
+  margin:5px auto
+}
+
+
+.navbar-toggler .top-bar{
+  transform:rotate(45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar{
+  opacity: 0;
+  filter:alpha(opacity=o)
+}
+
+.navbar-toggler .bottom-bar{
+  transform:rotate(-45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler.collapsed .top-bar{
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar{
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar{
+  transform: rotate(0);
+}
 
 
 
